# MiniNN

./: .bazelrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  bazel.sh  build.ps1  build.py  build.sh  build_bazel.sh  build_mininn.py  requirement.txt  setup.py
.github/workflows/: android.yml  lint.yml  linux.yml  mac.yml  python.yml  release.yml  windows.yml
convertor/: README.md  test.py
convertor/mininn/: Graph.py  Op.py
convertor/mininn_fbs/: Graph.py  Op.py
convertor/onnx/: convert_onnx.py  gen_add.py  run_add.py
convertor/test/fbs/: test.py
convertor/test/onnx/: graph_surgery.py
convertor/tools/: graph_surgery.py  shape_infer.py
demo/: BUILD  CMakeLists.txt  main.cc
docs/: 00_cpp_dev_env.md  00_develop.md  00_git.md  01_cpp.md  01_environment.md  01_tensor.md  02_build.md  02_node.md  02_tensor.md  03_graph.md  03_node.md  03_platform.md  04_graph.md  04_kernel.md  04_mininn.md  05_backend.md  05_kernel.md  06_python.md  07_test.md  README.md  notes.md
fbs_schema/: README.md  mininn.fbs  mininn_generated.h
fbs_schema/mininn/: Node.py  Tensor.py
fbs_schema/mininn_fbs/: Node.py  Tensor.py
mininn/: BUILD  CMakeLists.txt  test.cc
mininn/backend/: CMakeLists.txt  add.cu  backend.cc  cuda.cuh
mininn/backend/avx/: CMakeLists.txt  add_wrapper.cc  avx.h  test.cc
mininn/backend/cuda/: CMakeLists.txt  add.cu  cuda.cuh
mininn/backend/metal/: CMakeLists.txt  add.metal  add_wrapper.mm  metal.h
mininn/backend/mkl/: CMakeLists.txt  add.cc  mkl.h  test.cc
mininn/backend/neon/: CMakeLists.txt  add_wrapper.cc  neon.h
mininn/backend/opencl/: CMakeLists.txt  add.cl  add_wrapper.cc  opencl.h
mininn/backend/opengl/: add.glsl  test.cc
mininn/backend/sse/: CMakeLists.txt  add_wrapper.cc  sse.h  test.cc
mininn/backend/sve/: test.cc
mininn/graph/: CMakeLists.txt  graph.cc  graph.h  kernel.cc  kernel.h  node.cc  node.h  param.h  register.cc  register.h  register_helper.h  tensor.cc  tensor.h  type.h  use_kernel.h  use_op.h
mininn/graph/test/: graph_test.cc  node_test.cc  tensor_test.cc
mininn/kernel/: CMakeLists.txt  add_compute.cc  add_compute.h  clip_compute.cc  clip_compute.h  concat_compute.cc  concat_compute.h  constant_compute.cc  constant_compute.h  conv_compute.cc  conv_compute.h  gather_compute.cc  gather_compute.h  gemm_compute.cc  gemm_compute.h  globalaveragepool_compute.cc  globalaveragepool_compute.h  kernel.cc  kernel.h  reshape_compute.cc  reshape_compute.h  shape_compute.cc  shape_compute.h  unsqueeze_compute.cc  unsqueeze_compute.h
mininn/operator/: CMakeLists.txt  add.cc  add.h  clip.cc  clip.h  concat.cc  concat.h  constant.cc  constant.h  conv.cc  conv.h  gather.cc  gather.h  gemm.cc  gemm.h  globalaveragepool.cc  globalaveragepool.h  node.cc  param.h  reshape.cc  reshape.h  shape.cc  shape.h  unsqueeze.cc  unsqueeze.h
mininn/parser/: CMakeLists.txt  mininn_generated.h  parser.cc  parser.h
mininn/runtime/: CMakeLists.txt  predictor.cc  predictor.h  register.h  register_helper.h
mininn/test/: CMakeLists.txt  graph_test.cc  gtest_main.cc  node_test.cc  parser_test.cc  predictor_test.cc  tensor_test.cc
mininn/test/graph/: graph_test.cc  tensor_test.cc
mininn/test/model/: mv2_test.cc
mininn/test/operator/: add_test.cc  conv_test.cc  mv2_test.cc
mininn/test/parser/: parser_test.cc
mininn/test/runtime/: predictor_test.cc
mininn/utils/: CMakeLists.txt  log.cc  log.h  register.h  use_kernel.h  use_op.h  utils.cc  utils.h
models/: add_model.gynn  mininn_test.gynn  mv2_golden.txt  mv2_input.txt
python/: BUILD  CMakeLists.txt  clear.sh  pybind11.cc  run_all_test.py  setup.py
python/mininn/: convertor.py  predictor.py
python/mininn/mininn_fbs/: Attribute.py  Op.py
python/test/: pip_test.py  pybind_test.py  test.py
python/test/fbs/: fbs_test.py  test.py
python/test/model_test/: mv2_test.py
python/test/unit_test/: add_test.py  clip_test.py  common.py  concat_test.py  conv_test.py  gather_test.py  gemm_test.py  gen_add.py  globalaveragepool_test.py  reshape_test.py  run_add.py  shape_test.py  unsqueeze_test.py
python/tools/: graph_surgery.py  shape_infer.py
src/: CMakeLists.txt  build.ps1  build.sh  test.cc  test_gtest.cc
src/graph/: graph.cc  graph.h  node.h  tensor.cc  tensor.h  type.h
src/graph/test/: graph_test.cc  test_tensor.cc
src/operator/: add.cc  add.h
src/runtime/: register.h
