###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "mininn",
    version = "1.0.0",
)

# override path of dep flatbuffers
bazel_dep(name = "flatbuffers", version = "head")
local_path_override(
    module_name = "flatbuffers",
    path = "third_party/flatbuffers",
)

# override path of dep googletest
bazel_dep(name = "googletest", version = "head")
local_path_override(
    module_name = "googletest",
    path = "third_party/googletest",
)

# cuda: https://github.com/bazel-contrib/rules_cuda, https://registry.bazel.build/modules/rules_cuda
bazel_dep(name = "rules_cuda", version = "0.2.5")
local_path_override(
    module_name = "rules_cuda",
    path = "third_party/rules_cuda"
)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.toolkit(
    name = "cuda",
    toolkit_path = "",
)
use_repo(cuda, "cuda")

# pick a specific version (this is optional an can be skipped)
# archive_override(
#     module_name = "rules_cuda",
#     integrity = "{SRI value}",  # see https://developer.mozilla.org/en-US/docs/Web/Security/Subresource_Integrity
#     url = "https://github.com/bazel-contrib/rules_cuda/archive/{git_commit_hash}.tar.gz",
#     strip_prefix = "rules_cuda-{git_commit_hash}",
# )

# override path of dep pybind11_bazel
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
local_path_override(
    module_name = "pybind11_bazel",
    path = "third_party/pybind11_bazel",
)

# override path of dep rules_python
bazel_dep(name = "rules_python", version = "1.4.1")
local_path_override(
    module_name = "rules_python",
    path = "third_party/rules_python",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.13")
python.toolchain(python_version = "3.13")
use_repo(python, "python_3_13")

# dep platforms
# todo: windows do not need
bazel_dep(name = "platforms", version = "1.0.0")