file(GLOB KERNEL_SRC "*.cc")
add_library(kernel ${LIB_TYPE} ${KERNEL_SRC})


if (WITH_CUDA)
    target_compile_definitions(kernel PRIVATE -DWITH_CUDA)
endif()
if (WITH_OPENCL)
    target_compile_definitions(kernel PRIVATE -DWITH_OPENCL)
endif()
if (WITH_AVX)
    target_compile_definitions(kernel PRIVATE -DWITH_AVX)
endif()
if (WITH_SSE)
    target_compile_definitions(kernel PRIVATE -DWITH_SSE)
endif()
if (WITH_MKL)
    target_compile_definitions(kernel PRIVATE -DWITH_MKL)
endif()
if (WITH_MULTI_THREADS)
    target_compile_definitions(kernel PRIVATE -DWITH_MULTI_THREADS)
endif()

message(STATUS "Source files for kernel library: ${KERNEL_SRC}")