file(GLOB KERNEL_SRC "*.cc")
add_library(kernel ${LIB_TYPE} ${KERNEL_SRC})
target_link_libraries(kernel PRIVATE mininn_compile_options)


if (WITH_OPENCL)
    target_compile_definitions(kernel PRIVATE -DWITH_OPENCL)
endif()
if (WITH_AVX)
    target_compile_definitions(kernel PRIVATE -DWITH_AVX)
endif()
if (WITH_SSE)
    target_compile_definitions(kernel PRIVATE -DWITH_SSE)
endif()
if (WITH_MULTI_THREADS)
    target_compile_definitions(kernel PRIVATE -DWITH_MULTI_THREADS)
endif()
if (WITH_NEON)
    target_compile_definitions(kernel PRIVATE -DWITH_NEON)
endif()

message(STATUS "Source files for kernel library: ${KERNEL_SRC}")